// Helpdesk — Entity Relationship Diagram

Project Helpdesk {
  database_type: 'PostgreSQL'
  Note: 'Ticket tracking system. Users report problems, Agents resolve them.'
}

// ENUMS

Enum role {
  User
  Agent
}

Enum ticket_status {
  New
  InProgress
  Resolved
  Closed
  Rejected
}

Enum priority {
  Low
  Medium
  High
  Critical
}

// TABLES

Table Users {
  // inherited from IdentityUser<int>
  Id                    int          [pk, increment, note: 'inherited — int, not the default GUID string']
  UserName              varchar(256) [null, note: 'inherited — set it equal to Email on register']
  NormalizedUserName    varchar(256) [null, note: 'inherited — uppercased, this is what lookups use']
  Email                 varchar(256) [null, note: 'inherited — login identifier']
  NormalizedEmail       varchar(256) [null, note: 'inherited']
  EmailConfirmed        boolean      [not null, default: false, note: 'inherited']
  PasswordHash          text         [null, note: 'inherited — hashed by Identity']
  SecurityStamp         text         [null, note: 'inherited — invalidates tokens when credentials change']
  ConcurrencyStamp      text         [null, note: 'inherited — optimistic concurrency']
  PhoneNumber           text         [null, note: 'inherited — unused here']
  PhoneNumberConfirmed  boolean      [not null, default: false, note: 'inherited — unused here']
  TwoFactorEnabled      boolean      [not null, default: false, note: 'inherited — unused here']
  LockoutEnd            timestamptz  [null, note: 'inherited — unused here']
  LockoutEnabled        boolean      [not null, default: true, note: 'inherited — unused here']
  AccessFailedCount     int          [not null, default: 0, note: 'inherited — unused here']

  // additions on AppUser
  FullName              varchar(200) [not null]
  Role                  role         [not null, default: 'User']
  CreatedAt             timestamptz  [not null, default: `now()`]

  Indexes {
    NormalizedUserName [unique, name: 'UserNameIndex', note: 'created by Identity']
    NormalizedEmail    [name: 'EmailIndex', note: 'created by Identity']
    Role               [name: 'ix_users_role']
  }
}

Table Categories {
  Id    int          [pk, increment]
  Name  varchar(100) [not null, unique]

}

Table Tickets {
  Id               int           [pk, increment]
  Title            varchar(200)  [not null]
  Description      varchar(2000) [not null]
  Status           ticket_status [not null, default: 'New']
  Priority         priority      [not null, default: 'Medium']
  CategoryId       int           [not null, ref: > Categories.Id]
  AuthorId         int           [not null, ref: > Users.Id, note: 'who reported it']
  AssignedAgentId  int           [null,     ref: > Users.Id, note: 'NULL until an agent picks it up']
  CreatedAt        timestamptz   [not null, default: `now()`]
  UpdatedAt        timestamptz   [not null, default: `now()`]
  ClosedAt         timestamptz   [null]

  Indexes {
    Status                  [name: 'ix_tickets_status']
    Priority                [name: 'ix_tickets_priority']
    CategoryId              [name: 'ix_tickets_category']
    AuthorId                [name: 'ix_tickets_author']
    AssignedAgentId         [name: 'ix_tickets_assigned_agent']
    CreatedAt               [name: 'ix_tickets_created_at']
    (AuthorId, CreatedAt)   [name: 'ix_tickets_author_created', note: 'covers the User list query: own tickets, newest first']
  }

}

Table Comments {
  Id         int           [pk, increment]
  TicketId   int           [not null, ref: > Tickets.Id]
  AuthorId   int           [not null, ref: > Users.Id]
  Text       varchar(2000) [not null]
  CreatedAt  timestamptz   [not null, default: `now()`]

  Indexes {
    (TicketId, CreatedAt) [name: 'ix_comments_ticket_created', note: 'comment thread, oldest first']
  }
}

Table TicketHistory {
  Id           int           [pk, increment]
  TicketId     int           [not null, ref: > Tickets.Id]
  ChangedById  int           [not null, ref: > Users.Id]
  FromStatus   ticket_status [not null]
  ToStatus     ticket_status [not null]
  ChangedAt    timestamptz   [not null, default: `now()`]

  Indexes {
    (TicketId, ChangedAt) [name: 'ix_history_ticket_changed']
  }

}

// TABLE GROUPS

TableGroup Identity {
  Users
}

TableGroup Core {
  Tickets
  Categories
}

TableGroup Activity {
  Comments
  TicketHistory
}
